--- a/src/styles/video.scss
+++ b/src/styles/video.scss
@@ -2,6 +2,19 @@ iframe,
 video {
   width: 60%;
   height: 80vh;
+
+  @include media("<tablet") {
+    width: 100%;
+    height: 90vh;
+  }
+
+  @include media("<lgphone") {
+    height: 60vh;
+  }
+
+  @include media("<phone") {
+    height: 50vh;
+  }
 }
 
 .video-content {
@@ -17,6 +30,7 @@ video {
 
   p {
     font-size: 1rem;
+    text-align: left;
   }
 
 }
