--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -16,7 +16,7 @@
     line-height: 20px;
   }
 
-  p {
+  p.work-headline {
     padding-left: 5%;
     padding-right: 5%;
     width: 90%;
